gccida/c3/ssa_eliminate_dead_code
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:993:4: error: expected ';' after expression
rtx v40; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:993:5: error: use of undeclared identifier 'v40'
rtx v40; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1021:4: error: expected ';' after expression
rtx v68; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1021:5: error: use of undeclared identifier 'v68'
rtx v68; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1031:4: error: expected ';' after expression
rtx v78; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1031:5: error: use of undeclared identifier 'v78'
rtx v78; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1034:4: error: expected ';' after expression
rtx v81; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1034:5: error: use of undeclared identifier 'v81'
rtx v81; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1035:4: error: expected ';' after expression
rtx v82; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1035:5: error: use of undeclared identifier 'v82'
rtx v82; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1039:4: error: expected ';' after expression
rtx insn_after_basic_block_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1039:5: error: use of undeclared identifier 'insn_after_basic_block_note'; did you mean 'first_insn_after_basic_block_note'?
rtx insn_after_basic_block_note; // rax 
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~
    first_insn_after_basic_block_note
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/basic-block.h:325:12: note: 'first_insn_after_basic_block_note' declared here
extern rtx first_insn_after_basic_block_note    PARAMS ((basic_block));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1040:4: error: expected ';' after expression
rtx v87; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1040:5: error: use of undeclared identifier 'v87'
rtx v87; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1043:4: error: expected ';' after expression
rtx v90; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1043:5: error: use of undeclared identifier 'v90'
rtx v90; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1050:4: error: expected ';' after expression
rtx mm; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1050:5: error: use of undeclared identifier 'mm'
rtx mm; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/ssa-dce.c:1056:4: error: expected ';' after expression
rtx x; // [rsp+20h] [rbp-58h] BYREF 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ssa_eliminate_dead_code/src/obj/ssa-dce.o] Error 1
